# ha-hemm

./: .env  .gitignore  CHANGELOG.md  Makefile  README.md  docker-compose.test.yml  pyproject.toml
.bin/: .ha_test_token  README.md
.github/: dependabot.yml
.github/workflows/: auto-merge.yml  ci.yml  codeql.yml
custom_components/hemm/: __init__.py  config_flow.py  const.py  coordinator.py  device_flow.py  diagnostics.py  identification.py  manifest_builder.py  sensor.py  services.py  strings.json
custom_components/hemm/blueprints/: hemm_passive_meter.yaml  hemm_planned_watchdog.yaml  hemm_reactive_follower.yaml
custom_components/hemm/examples/: dry_run_verification.yaml  ev_plug_schedule.yaml  hp_defrost_lockout.yaml  legionella_protection.yaml  para14a_grid_reduction.yaml  passive_meter.yaml  planned_watchdog.yaml  reactive_follower.yaml
custom_components/hemm/translations/: de.json
docs/: DOCKER_TESTING.md  ISSUES_HACTL_COMPANION.md  architecture-decisions.md  onboarding.md  testing.md
tests/: conftest.py  test_config_flow.py  test_device_flow.py  test_identification.py  test_manifest_builder.py  test_options_flow.py  test_sensor.py  test_services.py  test_vocab_contract.py
tests/integration/: conftest.py  hactl.py  hactl_client.py  test_container.py  test_hactl_companion.py  test_hactl_config.py  test_hactl_entities.py  test_hactl_health.py  test_hactl_manifest.py  test_hactl_stress.py  test_hactl_zeitdynamik.py
tests/integration/config/: configuration.yaml
tests/sim/: __init__.py  _run_all_houses.py  _setup_house.py  conftest.py  docker-compose.sim.yml  runner.py  test_sim_houses.py
tests/sim/base_config/: configuration.yaml  scripts.yaml
tests/warp/: test_warp_stress.py
(+12 files in other folders)
