[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ha-hemm"
version = "0.1.0"
description = "Home Assistant Custom Component for HEMM Energy Optimizer"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "HEMM Contributors" }]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "pytest-homeassistant-custom-component>=0.13",
    "ruff>=0.4",
    "pre-commit>=3.7",
]

[project.urls]
Homepage = "https://github.com/hemm-energy/ha-hemm"
Repository = "https://github.com/hemm-energy/ha-hemm"

[tool.hatch.build.targets.wheel]
packages = ["custom_components/hemm"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "A",      # flake8-builtins
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific
]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["custom_components.hemm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: Unit tests (default, fast)",
    "container: Container-based integration tests (requires Docker)",
    "pi: Tests that run on Raspberry Pi hardware only",
    "slow: Long-running simulation tests",
]
addopts = "-m 'not container and not pi and not slow' --strict-markers"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
